renaming class css

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                         <h3 class="description__text">First template from series templates to design web pages, using components system</h3> 
                     </div>
                     <div class="lets-Go">
-                        <button class="lets-go__btn"><p class="let-go__btn_text">Let’s Go</p><img src="./img/btn-img.svg" alt="letsgo-logo" class="lets-go_img"></button>
+                        <button class="lets-go__btn"><p class="lets-go__btn-text">Let’s Go</p><img src="./img/btn-img.svg" alt="letsgo-logo" class="lets-go_img"></button>
                     </div>
                 </div>
         
                 <div class="sub-Tract">
                     <div class="first-line">
                         <div class="second-line">
-                            <button class="subTract-Btn"><img src="./img/Subtract.svg" alt="Subtrack" class="subTract-Btn-img"></button>
+                            <button class="sub-tract-btn"><img src="./img/Subtract.svg" alt="Subtrack" class="sub-tract-btn-img"></button>
                         </div>
                     </div>
                 </div>  
