changed the layout on the site for different extensions

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                     <p class="graphic-description paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim.</p>
                 </div>
                 <div class="graphic-swiper">
-                    <img src="./img/1.png" alt="">
-                    <img src="./img/2.png" alt="">
-                    <img src="./img/3.png" alt="">
-                    <img src="./img/1.png" alt="">
-                    <img src="./img/2.png" alt="">
+                    <img class="graphic-img" src="./img/1.png" alt="">
+                    <img class="graphic-img" src="./img/2.png" alt="">
+                    <img class="graphic-img" src="./img/3.png" alt="">
+                    <img class="graphic-img" src="./img/1.png" alt="">
+                    <img class="graphic-img" src="./img/2.png" alt="">
                 </div>
             </section>
 
@@ -277,21 +277,18 @@
             <section class="team">
                 <div class="team-first-box">
                     <div class="team-title">
-                        <h1 class="team-title-text title-styles">Project's team</h1>
-                        <p class="team-title-description text-styles">Sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim veniam lorem ipsum dolor.Sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                        <h1 class="team-title-text h1">Project's team</h1>
+                        <p class="team-title-description paragraph">Sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim veniam lorem ipsum dolor.Sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                     </div>
                     <div class="team-btn-box">
-                        <button class="team-button">
-                            <p class="team-button-text">Join our team</p>
-                            <img src="./img/Add-resume.svg" alt="" class="team-button-img">
-                        </button>
+                        <button class="team-button sign-up-button-big">Join our team<img src="./img/Add-resume.svg" alt="letsgo-logo" class="lets-go_img"></button>
                     </div>
                 </div>
                 <div class="team-wrapper">
                     <div class="team-second-box">
                         <div class="team-container">
                             <img src="./img/team1.png" alt="" class="team-foto">
-                            <div class="team-link">
+                            <div class="team-link card">
                                 <div class="team-box-name">
                                     <h1 class="team-box-name-text">Pieter Omvlee</h1>
                                     <p class="team-box-name-description">Designer</p>
@@ -307,7 +304,7 @@
                     <div class="team-second-box">
                         <div class="team-container">
                             <img src="./img/team1.png" alt="" class="team-foto">
-                            <div class="team-link">
+                            <div class="team-link card">
                                 <div class="team-box-name">
                                     <h1 class="team-box-name-text">Pieter Omvlee</h1>
                                     <p class="team-box-name-description">Designer</p>
@@ -323,7 +320,7 @@
                     <div class="team-second-box">
                         <div class="team-container">
                             <img src="./img/team1.png" alt="" class="team-foto">
-                            <div class="team-link">
+                            <div class="team-link card">
                                 <div class="team-box-name">
                                     <h1 class="team-box-name-text">Pieter Omvlee</h1>
                                     <p class="team-box-name-description">Designer</p>
@@ -339,7 +336,7 @@
                     <div class="team-second-box">
                         <div class="team-container">
                             <img src="./img/team1.png" alt="" class="team-foto">
-                            <div class="team-link">
+                            <div class="team-link card">
                                 <div class="team-box-name">
                                     <h1 class="team-box-name-text">Pieter Omvlee</h1>
                                     <p class="team-box-name-description">Designer</p>
@@ -360,22 +357,17 @@
     <footer class="footer">
         <div class="footer-wrapper">
             <div class="footer-first-box">
-                <section class="footer-box">
+                <section class="footer-box container">
                     <div class="footer-title">
-                        <h1 class="footer-title-text">Download the future</h1>
+                        <h1 class="footer-title-text h1-head">Download the future</h1>
                     </div>
                     <div class="footer-description">
-                        <p class="footer-description-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim.</p>
+                        <p class="footer-description-text paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim.</p>
                     </div>
-                    <div class="footer-input">
-                        <div class="footer-input-box"><input class="footer-input-box-inp" type="text"></div>
-                        <div class="footer-input-button">
-                            <button class="swiper-signUp__btn">
-                                <p class="swiper-signUp__btn__text">Sign Up</p>
-                                <img class="swiper-signUp__btn__img" src="./img/Flash-black.svg" alt="">
-                            </button>
-                        </div>
-                    </div>
+                    <form class="footer-form" action="#">
+                        <input class="footer-form__input" type="text" placeholder="Input text placeholder">
+                        <button class="footer-form__btn sign-up-button-small">Sign Up <img src="./img/Flash-black.svg" alt="button-sign-up"></button>
+                    </form>
                     <div class="footer-social">
                         <a href="#" class="footer-social-link"><img src="./img/footer-social1.svg" alt="" class="footer-social-img"></a>
                         <a href="#" class="footer-social-link"><img src="./img/footer-social2.svg" alt="" class="footer-social-img"></a>
@@ -384,7 +376,7 @@
                 </section>
             </div>
             <div class="footer-second-box">
-                <section class="footer-botom">
+                <section class="footer-botom container">
                     <div class="footer-nml">
                         <div class="footer-link-container">
                         <div class="footer-product">
@@ -428,18 +420,13 @@
                         <div class="footer-inp-title">
                             <h3 class="footer-item-link-active">Newsletter</h3>
                             <h4 class="footer-inp-descr">Join our weekly maiiling list</h4>
-                            <p class="footer-inp-name">Name *</p>
+                            <p class="footer-inp-name">Email *</p>
                         </div>
                         <div class="footer-inp-inp">
-                            <div class="footer-input">
-                                <div class="footer-input-box"><input class="footer-input-box-inp" type="text"></div>
-                                <div class="footer-input-button">
-                                    <button class="swiper-signUp__btn">
-                                        <p class="swiper-signUp__btn__text">Sign Up</p>
-                                        <img class="swiper-signUp__btn__img" src="./img/Flash-black.svg" alt="">
-                                    </button>
-                                </div>
-                            </div>
+                            <form class="footer-form" action="#">
+                                <input class="footer-second-form__input footer-form__input" type="text" placeholder="Input text placeholder">
+                                <button class="footer-second-form__btn sign-up-button-small ">Sign Up <img src="./img/Flash.svg" alt="button-sign-up"></button>
+                            </form>
                         </div>
                         </div>
                     </div>
