formatted the HTML code

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="speed-container">
                         <div class="speed-first-box"><img class="speed-img" src="./img/speed5.svg" alt="" class="speed__img"></div>
                         <div class="speed-second-box">
-                            <p class="speed__subtitle h1 animated">Animated</ü>
+                            <p class="speed__subtitle h1 animated">Animated</p>
                             <p class="speed__description paragraph">Sed do eiusmod tempor incididunt ut consectetur adipisicing elit,do eiusmod tempor incididunt ut labore et dolore</p>
                         </div>
                     </div>
